# qd_tuner

./: LICENSE  README.md  ffigen.yaml  pubspec.yaml
android/: CMakeLists.txt  gradle.properties
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/qd_tuner/: MainActivity.kt
ios/: Podfile
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: audio_engine.dart  main.dart  yin_bindings.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner/: Info.plist
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: CMakeLists.txt  Runner.rc  main.cpp
yin/: Yin.podspec  fft.c  fft.h  yin.c  yin.h
